[package]
name = "csv-txn-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
eyre = "0.6.12"
csv = "1.3.1"
rust_decimal = { version = "1.37.2", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
rstest = "0.18"
rust_decimal_macros = "1.37"
quickcheck = "1.0"
quickcheck_macros = "1.0"
